--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -1069,10 +1069,16 @@
 	margin: 0 !important
 	transform: none !important
 	text-align: left !important
+	letter-spacing: normal !important
+	vertical-align: baseline !important
 	border: none !important
+	border-radius: 0 !important
 	box-shadow: none !important
 	opacity: 1 !important
+	visibility: visible !important
 	z-index: auto !important
+	column-count: 1 !important
+	column-gap: 0 !important
 
 =prints-space-bottom-sm()
 	margin-top: 0 !important
