--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -15,7 +15,7 @@ $line-height--sm: round-float(2.4rem/$font-size--sm, 2) !default
 $font-size--less: 1.4rem !default
 $line-height--less: round-float(2.0rem/$font-size--less, 2) !default
 
-// ===============
+// =======h1========
 $font-size-h1: 4.8rem !default
 $line-height-h1: round-float(6.0rem/$font-size-h1, 2) !default
 // md ===
@@ -24,7 +24,7 @@ $line-height-h1--md: round-float(4.8rem/$font-size-h1--md, 2) !default
 // sm ===
 $font-size-h1--sm: 3.0rem !default
 $line-height-h1--sm: round-float(4.2rem/$font-size-h1--sm, 2) !default
-// ===============
+// =======h2========
 $font-size-h2: round-float($font-size-h1*3.6rem/4.8rem, 1) !default
 $line-height-h2: round-float(4.8rem/3.6rem, 2) !default
 // md ===
@@ -33,19 +33,19 @@ $line-height-h2--md: round-float(($line-height-h1--md*1.02),2) !default
 // sm ===
 $font-size-h2--sm: round-float($font-size-h1--sm*0.87, 1) !default
 $line-height-h2--sm: round-float(($line-height-h1--sm*1.01),2) !default
-// ===============
+// =======h3========
 $font-size-h3: round-float($font-size-h1*2.4rem/4.8rem, 1) !default
 $line-height-h3: round-float(3.6rem/2.4rem, 2) !default
 // sm ===
 $font-size-h3--sm: round-float($font-size-h1--sm*0.73, 1) !default
 $line-height-h3--sm: round-float(($line-height-h1--sm*1.05),2) !default
-// ===============
+// =======h4========
 $font-size-h4: round-float($font-size-h1*1.8rem/4.8rem, 1) !default
 $line-height-h4: round-float(3.0rem/1.8rem, 2) !default
-// ===============
+// =======h5========
 $font-size-h5: $font-size !default
 $line-height-h5: $line-height !default
-// ===============
+// =======h6========
 $font-size-h6: round-float($font-size*0.75, 1) !default
 $line-height-h6: round-float($line-height*1.25, 2) !default
 
