--- a/src/sass/partials/_forms-default.sass
+++ b/src/sass/partials/_forms-default.sass
@@ -4,7 +4,7 @@
 
 /*FORM STYLES DEFAULT
 /*form layout
-.form-row, .input-wrap, .form-row
+.form-row, .input-wrap
 	position: relative // Важно! Для позицирования отметки подтверждения полей формы
 	margin-bottom: $form-bottom-space
 	z-index: 1 // Важно! Отметка подтверждения полей формы имеет z-index: -1
