--- a/src/sass/components/_catalog-menu.sass
+++ b/src/sass/components/_catalog-menu.sass
@@ -481,6 +481,10 @@
 			transform: translate(0, 0)
 			box-shadow: -5px 0 15px rgba(0, 0, 0, 0.2)
 
+		.home-page &
+			transform: translate(0, 0)
+			box-shadow: none
+
 	+media('<desk-lg')
 		.ea-has-catalog-menu &
 			display: none
