--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -104,6 +104,7 @@
 ///*PAGES*/
 ///*======================================================*/
 @import pages/home
+@import pages/ea-home
 @import pages/catalog
 
 ///*======================================================*/
