--- a/src/sass/components/_sliders.sass
+++ b/src/sass/components/_sliders.sass
@@ -28,6 +28,7 @@
 		-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25)
 		filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25)
 		cursor: default
+		background: none
 
 		&::before
 			opacity: 1
