--- a/src/sass/components/_accordion-simple.sass
+++ b/src/sass/components/_accordion-simple.sass
@@ -18,12 +18,15 @@
 		transition-property: color
 		transition-duration: $animation-speed
 
-		.no-touchevents &:hover
-			color: $link-color
+		&:hover
+			color: $base-color
+
+			.ea-site &
+				color: $base-color--ea
 
 		& > i
 			$this-icon-lines-width: 12px
-			$this-icon-lines-height: 1px
+			$this-icon-lines-height: 2px
 			$this-icon-lines-color: $text-color
 
 			position: absolute
@@ -47,23 +50,18 @@
 				transform-origin: bottom right
 				transform: rotate(45deg)
 
-			//&::before
-				top: 0
-				transform: rotate(-45deg)
-
 			&::after
 				left: 50%
 				transform-origin: bottom left
 				transform: rotate(-45deg)
 
-			//&::after
-				top: 0
-				transform: rotate(45deg)
-
-		.no-touchevents &:hover
+		&:hover
 			& > i
 				&::before, &::after
-					background-color: $link-color
+					background-color: $base-color
+
+					.ea-site &
+						background-color: $base-color--ea
 
 		&.is-open i
 			transform: rotate(0.5turn)
@@ -79,8 +77,50 @@
 		& + div
 			padding: 18px 0
 			display: none
+			+font(16px, round-float(24/16, 2))
 
 			& > *:last-child
 				margin-bottom: 0
+
+	h4
+		+font-bold
+		+font(14px, round-float(24/14, 2))
+		letter-spacing: 0.05em
+		text-transform: uppercase
+		color: inherit
+		margin-bottom: $bottom-space
+
+	.cols
+		+clear-spacing
+		+grid-parent($grid-space)
+		margin-bottom: $bottom-space
+
+		+media('<desk-hd')
+			+grid-parent($grid-space--sm)
+
+	.col
+		+grid-item(3, $grid-space)
+		+font(18px, round-float(32/18, 2))
+		letter-spacing: normal
+
+		+media('<desk-hd')
+			+grid-item-responsive(3, $grid-space--sm)
+
+		ul
+			margin: 0 0 10px
+			padding: 0
+
+			&:last-child
+				margin-bottom: 0
+
+			li
+				padding: 0
+				margin: 0
+
+				&:last-child
+					margin-bottom: 0
+
+				&::before
+					content: none
 
 /*accordion end
